🐛 :fix: Highlight for the selected option in selection is visible now

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -70,6 +70,9 @@
     box-shadow: 0 0 0 var(--red);
   }
 
+.usrinput.selection option {
+    background: var(--background);
+}
 
 .all{
     width: var(--w_full);
